--- a/src/pages/WaveDataGenerator.page
+++ b/src/pages/WaveDataGenerator.page
@@ -34,7 +34,7 @@
                     <apex:outputLabel for="selectObj" value="Select Object:" />
                     <apex:selectList multiselect="false" value="{!selectedObject}" size="1" id="selectObj">
                         <apex:selectOptions value="{!orgObjects}" />
-                        <apex:actionSupport reRender="dataUrlTxt,validationPanel,jobStatusPanel" event="onchange" action="{!updateSelectedObj}" />
+                        <apex:actionSupport reRender="dataUrlTxt,validationPanel,jobStatusPanel,btnAccept,validatingSchemaStatus" event="onchange" action="{!updateSelectedObj}" />
                     </apex:selectList>
 
                     <apex:panelGroup >
