--- a/src/pages/WaveDataManager.page
+++ b/src/pages/WaveDataManager.page
@@ -5,14 +5,21 @@
 	   	<apex:form>
 	   		<apex:commandButton value="Run Data Generation" styleClass="btn-primary" action="{!run}"/>
 	   		<br /><br />
-	   		<vs:panel type="default" title="Results">
+	   		<vs:panel type="default" title="Results" id="messages">
 	   			<vs:alert type="success" rendered="{!successMessage != ''}">
 	    			<apex:outputText value="{!successMessage}" />
 				</vs:alert>
 				<vs:alert type="danger" rendered="{!errorMessage != ''}">
 	    			<apex:outputText value="{!errorMessage}" />
 				</vs:alert>
+				<vs:alert type="warning" rendered="{!warningMessage != ''}">
+	    			<apex:outputText value="{!warningMessage}" />
+				</vs:alert>
 			</vs:panel>
 	   	</apex:form>
 	</vs:visualstrapblock>
+	<apex:form>
+		<apex:actionPoller action="{!checkProcessingStatus}" reRender="processingStatus,checkFunction,messages" interval="5" enabled="{!objectsNodes.size > 0}" id="checkFunction"/>
+		<apex:outputText value="{!jobStatusDsc}" id="processingStatus"/>
+	</apex:form>
 </apex:page>
