--- a/src/pages/WaveDataManager.page
+++ b/src/pages/WaveDataManager.page
@@ -74,6 +74,10 @@
 	   		<apex:panelGrid columns="1" width="200px">
 	   			<apex:outputLabel >Specify a new folder/app:</apex:outputLabel>
 	   			<apex:inputText value="{!folderName}" id="folderName" />
+	   			<apex:outputLabel >Specify the dataflow name:</apex:outputLabel>
+	   			<apex:inputText value="{!dataflowName}" id="dataflowName" />
+	   			<apex:outputLabel >Specify the dataflow label:</apex:outputLabel>
+	   			<apex:inputText value="{!dataflowLabel}" id="dataflowLabel" />
 	   		</apex:panelGrid><br />
 	   		<vs:visualstrapblock id="vsbButton" style="padding-top: 20px;">
 	   			<apex:commandButton value="Install App" styleClass="{!IF(disabledButton, 'disabled','')} btn-primary btn-lg" action="{!installApp}" rendered="{!selectedWaveApp != ''}" id="btnInstallApp" style="text-transform: none;" />
