--- a/src/pages/WaveDataManager.page
+++ b/src/pages/WaveDataManager.page
@@ -100,14 +100,65 @@
 	</apex:form>
 	<apex:form id="form3" styleClass="standardText">
 		<apex:actionPoller action="{!checkObjectLoadingStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3, btnInstallApp" interval="5" enabled="{!objectsNodes.size > 0}" id="checkFunction"/>
-		<apex:outputPanel rendered="{!processingLog.size > 0}">
+
+		<!-- Edgemarts Load Panel/Function -->
+		<apex:outputPanel id="loadEdgemartsPanel">
+			<apex:actionFunction name="loadEdgemarts" action="{!loadAllEdgemarts}" reRender="loadEdgemartsPanel,createDataflowPanel,processingLogPanel" />
+
+			<apex:outputPanel rendered="{!installationStep = 'LoadEdgemarts'}">
+				<script type="text/javascript">
+					console.log('About to execute loadEdgemarts...');
+					loadEdgemarts();
+				</script>
+			</apex:outputPanel>
+		</apex:outputPanel>
+
+		<!-- Dataflow Create Panel/Function -->
+		<apex:outputPanel id="createDataflowPanel">
+			<apex:actionFunction name="createDataflow" action="{!createDataflow}" reRender="createDataflowPanel,loadDashboardsPanel,processingLogPanel" />
+
+			<apex:outputPanel rendered="{!installationStep = 'CreateDataflow'}">
+				<script type="text/javascript">
+					console.log('About to execute createDataflow...');
+					createDataflow();
+				</script>
+			</apex:outputPanel>
+		</apex:outputPanel>
+
+		<!-- Dashboards Load Panel/Function -->
+		<apex:outputPanel id="loadDashboardsPanel">
+			<apex:actionFunction name="loadDashboards" action="{!loadAllDashboards}" reRender="loadDashboardsPanel,loadObjectsPanel,processingLogPanel" />
+
+			<apex:outputPanel rendered="{!installationStep = 'LoadDashboards'}">
+				<script type="text/javascript">
+					console.log('About to execute loadDashboards...');
+					loadDashboards();
+				</script>
+			</apex:outputPanel>
+		</apex:outputPanel>
+
+		<!-- Objects Load Panel/Function -->
+		<apex:outputPanel id="loadObjectsPanel">
+			<apex:actionFunction name="loadObjects" action="{!loadAllObjects}" reRender="loadObjectsPanel,form3,processingLogPanel" />
+
+			<apex:outputPanel rendered="{!installationStep = 'LoadObjects'}">
+				<script type="text/javascript">
+					console.log('About to execute loadObjects...');
+					loadObjects();
+				</script>
+			</apex:outputPanel>
+		</apex:outputPanel>
+
+		<!-- Log Panel -->
+		<apex:outputPanel rendered="{!processingLog.size > 0}" id="processingLogPanel">
 			<apex:outputText value="Status" id="processingStatus" style="font-weight: bold" />
 			<apex:panelGrid columns="1" width="600px" style="border: 1px solid #000;">
 				<apex:repeat value="{!processingLog}" var="logEntry" id="processingLogConsole">
 					<apex:outputText value="{!logEntry}" /><br />
 				</apex:repeat>
 			</apex:panelGrid>
-		</apex:outputPanel>		
+		</apex:outputPanel>
+
 	</apex:form>
 	<vs:visualstrapblock id="form1">	   		   	
 	   	<!--All the  Visualstrap content and Visualforce content here -->
