--- a/src/pages/WaveDataManager.page
+++ b/src/pages/WaveDataManager.page
@@ -58,31 +58,57 @@
 	<vs:importvisualstrap theme="paper" />
 
 	<apex:sectionHeader title="Wave Data Manager" subtitle="Configuration and Data Loading"/>
-	<apex:form style="margin-top: 50px;" styleClass="standardText">
+	<apex:form style="margin-top: 50px;" styleClass="standardText" rendered="{!pageRendered}">
 		<apex:panelGrid columns="2" columnClasses="valignTop">
 			<apex:panelGrid columns="1">
 				<apex:outputLabel >Please select an App to Load</apex:outputLabel>
 		        <apex:selectList value="{!selectedWaveApp}" multiselect="false" size="10" style="width:200px">
 		   			<apex:selectOptions value="{!waveApps}"/>
-		   			<apex:actionSupport reRender="appDescription,vsbButton,folderName" event="onchange" action="{!waveAppSelected}" />
+		   			<apex:actionSupport reRender="appDescription,vsbButton,folderName,folderGroup" event="onchange" action="{!waveAppSelected}" />
 		   		</apex:selectList>
 			</apex:panelGrid>   		
 	   		<apex:panelGrid columns="1" width="200px">
 	   			<apex:outputText value="Description" style="font-weight: bold" />
 	   			<apex:outputText value="{!appDescription}" id="appDescription" />
 	   		</apex:panelGrid>
-	   		<apex:panelGrid columns="1" width="200px">
-	   			<apex:outputLabel >Specify a new folder/app:</apex:outputLabel>
-	   			<apex:inputText value="{!folderName}" id="folderName" />
-	   			<apex:outputLabel >Specify the dataflow name:</apex:outputLabel>
-	   			<apex:inputText value="{!dataflowName}" id="dataflowName" />
-	   			<apex:outputLabel >Specify the dataflow label:</apex:outputLabel>
-	   			<apex:inputText value="{!dataflowLabel}" id="dataflowLabel" />
-	   			<apex:outputLabel >Notify this email when complete:</apex:outputLabel>
-	   			<apex:inputText value="{!emailAddress}" id="emailAddress" />
+	   		<apex:panelGrid columns="1" width="200px" id="controls">
+	   			
+	   			<apex:outputLabel for="processType">Specify the process:</apex:outputLabel>
+	   			<apex:selectList value="{!selectedInstallationProcess}" size="1" id="processType">
+	   				<apex:selectOption itemValue="fullInstallation" itemLabel="Full Installation"/>
+	   				<apex:selectOption itemValue="createMetadata" itemLabel="Create Objects and Fields"/>
+	   				<apex:selectOption itemValue="createWaveApp" itemLabel="Create Wave Application"/>
+	   				<apex:selectOption itemValue="loadObjects" itemLabel="Load Data"/>
+	   				<apex:selectOption itemValue="timeShifting" itemLabel="Time shifting"/>
+	   				<apex:actionSupport event="onchange" rerender="folderGroup,emailNotification"/>
+	   			</apex:selectList>
+
+	   			<apex:outputPanel id="folderGroup" >
+	   				<apex:panelGrid columns="1" rendered="{!selectedInstallationProcess = 'fullInstallation' || selectedInstallationProcess = 'createWaveApp'}">
+			   			<apex:outputLabel >Specify the wave application label:</apex:outputLabel>
+			   			<apex:inputText value="{!folderLabel}" id="folderLabel" />
+			   			<apex:outputLabel >Specify the wave application name:</apex:outputLabel>
+			   			<apex:inputText value="{!folderName}" id="folderName" />
+			   			<apex:outputLabel >Specify the dataflow name:</apex:outputLabel>
+			   			<apex:inputText value="{!dataflowName}" id="dataflowName" />
+			   			<apex:outputLabel >Specify the dataflow label:</apex:outputLabel>
+			   			<apex:inputText value="{!dataflowLabel}" id="dataflowLabel" />
+		   			</apex:panelGrid>
+	   			</apex:outputPanel>
+
+				<apex:outputPanel id="emailNotification">
+					<apex:panelGrid columns="1" rendered="{!selectedInstallationProcess = 'fullInstallation'}">
+			   			<apex:outputLabel >Notify this email when complete:</apex:outputLabel>
+			   			<apex:inputText value="{!emailAddress}" id="emailAddress" />
+		   			</apex:panelGrid>
+	   			</apex:outputPanel>
+
 	   		</apex:panelGrid><br />
 	   		<vs:visualstrapblock id="vsbButton" style="padding-top: 20px;">
-	   			<apex:commandButton value="Install App" styleClass="{!IF(disabledButton, 'disabled','')} btn-primary btn-lg" action="{!installApp}" rendered="{!selectedWaveApp != ''}" id="btnInstallApp" style="text-transform: none;" />
+	   			<apex:commandButton value="Run" styleClass="{!IF(disabledButton, 'disabled','')} btn-primary btn-lg" action="{!executeSelectedProcess}" rendered="{!selectedWaveApp != ''}" id="btnInstallApp" style="text-transform: none;" />
+	   			<apex:outputPanel style="margin-left: 15px;" rendered="{!disabledButton}">
+	   				<apex:image value="{!$Resource.LoadingGif}"/>
+	   			</apex:outputPanel>
 	   		</vs:visualstrapblock>
 		</apex:panelGrid>
 	</apex:form>	
@@ -99,15 +125,16 @@
 		</apex:outputPanel>
 	</apex:form>
 	<apex:form id="form3" styleClass="standardText">
-		<apex:actionPoller action="{!checkObjectLoadingStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3, btnInstallApp" interval="5" enabled="{!objectsNodes.size > 0}" id="checkFunction"/>
-
+		
+		<apex:actionPoller action="{!checkObjectLoadingStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3,vsbButton" interval="5" enabled="{!enableObjectProcessingCheck}" id="checkFunction"/>
+		<apex:actionPoller action="{!checkTimeShiftingStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3,vsbButton" interval="5" enabled="{!timeShiftingItems.size > 0 && enableTimeShiftingCheck}" id="checkTimeShiftingFunction"/>
+		
 		<!-- Edgemarts Load Panel/Function -->
 		<apex:outputPanel id="loadEdgemartsPanel">
-			<apex:actionFunction name="loadEdgemarts" action="{!loadAllEdgemarts}" reRender="loadEdgemartsPanel,createDataflowPanel,processingLogPanel" />
+			<apex:actionFunction name="loadEdgemarts" action="{!loadAllEdgemarts}" reRender="loadEdgemartsPanel,createDataflowPanel,processingLogPanel,form1,vsbButton" />
 
 			<apex:outputPanel rendered="{!installationStep = 'LoadEdgemarts'}">
 				<script type="text/javascript">
-					console.log('About to execute loadEdgemarts...');
 					loadEdgemarts();
 				</script>
 			</apex:outputPanel>
@@ -115,11 +142,10 @@
 
 		<!-- Dataflow Create Panel/Function -->
 		<apex:outputPanel id="createDataflowPanel">
-			<apex:actionFunction name="createDataflow" action="{!createDataflow}" reRender="createDataflowPanel,loadDashboardsPanel,processingLogPanel" />
+			<apex:actionFunction name="createDataflow" action="{!createDataflowStep}" reRender="createDataflowPanel,loadDashboardsPanel,processingLogPanel,form1,vsbButton" />
 
 			<apex:outputPanel rendered="{!installationStep = 'CreateDataflow'}">
 				<script type="text/javascript">
-					console.log('About to execute createDataflow...');
 					createDataflow();
 				</script>
 			</apex:outputPanel>
@@ -127,11 +153,10 @@
 
 		<!-- Dashboards Load Panel/Function -->
 		<apex:outputPanel id="loadDashboardsPanel">
-			<apex:actionFunction name="loadDashboards" action="{!loadAllDashboards}" reRender="loadDashboardsPanel,loadObjectsPanel,processingLogPanel" />
+			<apex:actionFunction name="loadDashboards" action="{!loadAllDashboards}" reRender="loadDashboardsPanel,loadObjectsPanel,processingLogPanel,form1,vsbButton" />
 
 			<apex:outputPanel rendered="{!installationStep = 'LoadDashboards'}">
 				<script type="text/javascript">
-					console.log('About to execute loadDashboards...');
 					loadDashboards();
 				</script>
 			</apex:outputPanel>
@@ -139,11 +164,10 @@
 
 		<!-- Objects Load Panel/Function -->
 		<apex:outputPanel id="loadObjectsPanel">
-			<apex:actionFunction name="loadObjects" action="{!loadAllObjects}" reRender="loadObjectsPanel,form3,processingLogPanel" />
+			<apex:actionFunction name="loadObjects" action="{!loadAllObjects}" reRender="loadObjectsPanel,form3,processingLogPanel,form1,vsbButton" />
 
 			<apex:outputPanel rendered="{!installationStep = 'LoadObjects'}">
 				<script type="text/javascript">
-					console.log('About to execute loadObjects...');
 					loadObjects();
 				</script>
 			</apex:outputPanel>
