--- a/src/pages/WaveDataManager.page
+++ b/src/pages/WaveDataManager.page
@@ -128,7 +128,8 @@
 		
 		<apex:actionPoller action="{!checkObjectLoadingStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3,vsbButton" interval="5" enabled="{!enableObjectProcessingCheck}" id="checkFunction"/>
 		<apex:actionPoller action="{!checkTimeShiftingStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3,vsbButton" interval="5" enabled="{!timeShiftingItems.size > 0 && enableTimeShiftingCheck}" id="checkTimeShiftingFunction"/>
-		
+		<!--<apex:actionPoller action="{!checkMetadataCreationStatus}" reRender="processingStatus,processingLogConsole,messages,form1,form3,vsbButton" interval="5" id="checkMetadataFunction"/>-->
+
 		<!-- Edgemarts Load Panel/Function -->
 		<apex:outputPanel id="loadEdgemartsPanel">
 			<apex:actionFunction name="loadEdgemarts" action="{!loadAllEdgemarts}" reRender="loadEdgemartsPanel,createDataflowPanel,processingLogPanel,form1,vsbButton" />
